/*
 * SonarQube
 * Copyright (C) 2009-2022 SonarSource SA
 * mailto:info AT sonarsource DOT com
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
import { shallow } from 'enzyme';
import * as React from 'react';
import { components, GroupTypeBase, InputProps, Props } from 'react-select';
import { mockReactSelectIndicatorProps } from '../../../helpers/mocks/react-select';
import Select from '../Select';

describe('Select', () => {
  it('should render correctly', () => {
    expect(shallowRender()).toMatchSnapshot('default');
  });

  it('should render complex select component', () => {
    const inputRenderer = (props: InputProps) => (
      <components.Input {...props} className={`little-spacer-top ${props.className}`} />
    );

    const props = {
      isClearable: true,
      isLoading: true,
      components: {
        Input: inputRenderer
      }
    };
    expect(shallowRender(props)).toMatchSnapshot('other props');
  });

  it('should render clearIndicator correctly', () => {
    const wrapper = shallowRender();
    const ClearIndicator = wrapper.instance().clearIndicator;
    const clearIndicator = shallow(<ClearIndicator {...mockReactSelectIndicatorProps()} />);
    expect(clearIndicator).toBeDefined();
  });

  it('should render dropdownIndicator correctly', () => {
    const wrapper = shallowRender();
    const DropdownIndicator = wrapper.instance().dropdownIndicator;
    const clearIndicator = shallow(<DropdownIndicator {...mockReactSelectIndicatorProps()} />);
    expect(clearIndicator).toBeDefined();
  });

  function shallowRender<
    Option,
    IsMulti extends boolean = false,
    Group extends GroupTypeBase<Option> = GroupTypeBase<Option>
  >(props: Partial<Props<Option, IsMulti, Group>> = {}) {
    return shallow<Select<Option, IsMulti, Group>>(<Select {...props} />);
  }
});
